// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`widget-roster reducer tests should handle UPDATE_WIDGET_STATE 1`] = `
Immutable.Map {
  "currentView": "VIEW_MAIN",
  "searchTerm": "Carmen Sandiago",
}
`;

exports[`widget-roster reducer tests should return initial state 1`] = `
Immutable.Map {
  "currentView": "VIEW_MAIN",
  "searchTerm": "",
}
`;
